vlib/v/checker/tests/const_name_for_loop_duplicate_name_err.vv
const item = 24
const i = 23

fn main() {
	for item, i in ['abc', 'def'] {
		println(item)
		println(i)
	}
}
